fixed missing border on packs div in store

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -106,7 +106,21 @@ a {
 .packs, .invCards {
   display:flex;
   flex-wrap: wrap;
-  flex-wrap: wrap;
+}
+
+.packs {
+  margin-left:10px;
+  flex: 1;
+  overflow-y: auto;
+  border-radius: 50px;
+
+  padding: 25px;
+
+  background: rgba(178, 101, 186, 0.22);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(178, 101, 186, 0.3);
 }
 
 
